<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright © 2011,2013 Konstantin Livitski

This file is part of n-Puzzle application. n-Puzzle application is free
software; you can redistribute it and/or modify it under the terms of the GNU
General Public License as published by the Free Software Foundation; either
version 3 of the License, or (at your option) any later version.

n-Puzzle application contains adaptations of artwork covered by the Creative
Commons Attribution-ShareAlike 3.0 Unported license. Please refer to the
NOTICE.md file at the root of this distribution or repository for licensing
terms that apply to that artwork.

n-Puzzle application is distributed in the hope that it will be useful, but
WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
details.

You should have received a copy of the GNU General Public License along with
n-Puzzle application; if not, see the LICENSE/gpl.txt file of this distribution
or visit <http://www.gnu.org/licenses>.
-->

<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/reshuffle" android:id="@+id/item_reshuffle"></item>
    <item android:title="@string/change_picture" android:id="@+id/item_change_picture"></item>
    <group android:checkableBehavior="single">
	    <item android:title="@string/difficulty_easy"
	    	android:id="@+id/item_difficulty_easy"
	    	android:checkable="true" />
	    <item android:title="@string/difficulty_medium"
	    	android:id="@+id/item_difficulty_medium"
	    	android:checkable="true"
	    	/>
	    <item android:title="@string/difficulty_hard"
	    	android:id="@+id/item_difficulty_hard"
	    	android:checkable="true" />
	</group>
</menu>
