<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright © 2011,2013 Konstantin Livitski

This file is part of n-Puzzle application. n-Puzzle application is free
software; you can redistribute it and/or modify it under the terms of the GNU
General Public License as published by the Free Software Foundation; either
version 3 of the License, or (at your option) any later version.

n-Puzzle application contains adaptations of artwork covered by the Creative
Commons Attribution-ShareAlike 3.0 Unported license. Please refer to the
NOTICE.md file at the root of this distribution or repository for licensing
terms that apply to that artwork.

n-Puzzle application is distributed in the hope that it will be useful, but
WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
details.

You should have received a copy of the GNU General Public License along with
n-Puzzle application; if not, see the LICENSE/gpl.txt file of this distribution
or visit <http://www.gnu.org/licenses>.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/you_win_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

    <ImageView
        android:id="@+id/congratulations_picture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        />

    <TextView
        android:id="@+id/congratulations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="12dp"
        android:background="@color/congrats_background"
        android:gravity="center"
        android:text="@string/text_congratulations"
        android:textColor="@color/congrats"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/text_puzzle_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/congratulations"
        android:background="@color/congrats_background"
        android:gravity="center"
        android:textColor="@color/congrats"
        android:textSize="16dp" />

    <LinearLayout
        android:id="@+id/text_puzzle_blurb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="12dp"
		>
        
    <TextView
        android:id="@+id/text_puzzle_blurb_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:background="@color/stats_background"
        android:text="@string/text_puzzle_blurb_1"
        android:textColor="@color/stats"
        android:textSize="16dp" />
    
    <TextView
        android:id="@+id/text_puzzle_blurb_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/stats_background"
        android:text="@string/text_puzzle_blurb_2"
        android:textColor="@color/stats"
        android:textSize="16dp" />
    
    </LinearLayout>
    
    <Button
        android:id="@+id/next_puzzle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_above="@id/text_puzzle_blurb"
        android:visibility="gone"
        android:text="@string/text_next_puzzle"
        android:textSize="14dp" />
    
</RelativeLayout>
