<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright © 2011,2013 Konstantin Livitski

This file is part of n-Puzzle application. n-Puzzle application is free
software; you can redistribute it and/or modify it under the terms of the GNU
General Public License as published by the Free Software Foundation; either
version 3 of the License, or (at your option) any later version.

n-Puzzle application contains adaptations of artwork covered by the Creative
Commons Attribution-ShareAlike 3.0 Unported license. Please refer to the
NOTICE.md file at the root of this distribution or repository for licensing
terms that apply to that artwork.

n-Puzzle application is distributed in the hope that it will be useful, but
WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
details.

You should have received a copy of the GNU General Public License along with
n-Puzzle application; if not, see the LICENSE/gpl.txt file of this distribution
or visit <http://www.gnu.org/licenses>.
-->

<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/viewgroup_app_frame"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/background"
  >
    
  	<TextView
  	    android:id="@+id/text_app_title"
  	    android:layout_width="match_parent"
  	    android:layout_height="wrap_content"
  	    android:layout_alignParentTop="true"
  	    android:text="@string/app_name"
    	android:gravity="center"
    	android:textSize="12dp"
		android:background="@color/title_background"
		android:textColor="@color/title"
		android:typeface="sans"
  	    />
  	
    <LinearLayout
        android:id="@+id/text_app_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/footer_background"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_app_footer_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/link_author"
            android:textColor="@color/footer"
            android:textColorLink="@color/footer"
            android:textSize="12dp"
            android:typeface="sans"
            />
        
        <TextView
            android:id="@+id/text_app_footer_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="right|center_vertical"
            android:text="@string/link_license"
            android:textColor="@color/footer"
            android:textColorLink="@color/footer"
            android:textSize="12dp"
            android:typeface="sans" />
    </LinearLayout>

</RelativeLayout>